# avm-editor

./: .gitignore  CMakeLists.txt  README.md
cmake/: conan_install_dependencies.cmake  get_sqlitecpp.cmake
example/: CMakeLists.txt  mainwindow.cpp
include/avm-editor/: avm-editor.hpp
include/avm-editor/core/: core.hpp
include/avm-editor/database/: assert.hpp  database.hpp  datatuple.hpp  table.hpp
include/avm-editor/database/detail/: datacell.hpp  file_ops.hpp  messages_printer.hpp
src/core/: core.cpp
src/database/: assert.cpp  database.cpp  datatuple.cpp  table.cpp
src/database/detail/: datacell.cpp  file_ops.cpp  messages_printer.cpp
tests/: CMakeLists.txt  testmodule.cpp  testmodule.h
